* 2013-04-12 - tobias.friedrich@open-xchange.com

 - Fix for bug 25799: Don't pass field 570 down to the storage layer
 
* 2013-04-13 - thorben.betten@open-xchange.com

 - Fix for bug 25252: Fixed API call
 - Fix for bug 25051: Interpret unparseable JSON token as a string

* 2013-04-12 - tobias.friedrich@open-xchange.com

 - Fix for bug 25837: Added several enhancements to avoid flooding of the distributed hazelcast topic for cache events
 
* 2013-04-12 - thorben.betten@open-xchange.com

 - Fix for bug 25814: Added null guard
 - Fix for bug 25807: Added null guard
 - Fix for bug 25869: Log severe errors if mail transport failed
 - Fix for bug 25847: Try to sanitize Content-Type header to an appropriate value (if signaled differently by file name)

* 2013-04-10 - tobias.friedrich@open-xchange.com

 - Fix for bug 24662: Added dynamic checksum calculation for X-ABCROP-RECTANGLE parameter 

* 2013-04-10 - thorben.betten@open-xchange.com

 - Fix for bug 25808: Fixed sending documents as mail attachments
 - Fix for bug 25802: Trying to bypass parsing a message from stream
 - Fix for bug 25792: Deal with possibly non-mail-safe E-Mail addresses
 - Fix for bug 24519: Ignore "@Open-Xchange" suffix during Content-Id look-up
 - Fix for bug 25806: Proper cache invalidation

* 2013-04-08 - thorben.betten@open-xchange.com

 - Fix for bug 25753: Sane Content-Type value

* 2013-04-08 - marc.arens@open-xchange.com

 - Fix for bug: 25039 - Files: Uploading a new file version of 10MB times out without user notification
 - Fix for bug: 25474 - Unexpected error: null when sending mail
 - Fix for bug: 25285 - publication api always returns http as protocol

* 2013-04-07 - thorben.betten@open-xchange.com

 - Fix for bug 25715: Check if specified quota is in allowed range for INT(10) UNSIGNED
 - Fix for bug 19150: Check existence of appropriate property on bundle start-up
 - Fix for bug 25732: Lowered log level for commonly raised "Folder not found" error code
