@@ -1,6 +1,7 @@
 * 2013-04-12 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 25799: Don't pass field 570 down to the storage layer
+ - Fix for bug 25768: Process contact delete batches in chunks, don't keep records in 'del_contacts_image' 
  
 * 2013-04-13 - thorben.betten@open-xchange.com
 
